--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-three/fiber": "^9.5.0",
     "@types/three": "^0.182.0",
     "jose": "^6.1.3",
+    "firebase": "^11.3.1",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "three": "^0.182.0"
